2006-01-31  Tim Omernick  <timo@apple.com>

        Reviewed by Geoff Garen.

        * bindings/c/c_utility.cpp:
        (KJS::Bindings::convertUTF8ToUTF16):
	Fixed an invalid assertion that UTF8Chars is not NULL.  It is valid for it to be NULL as long as
	UTF8Length is 0.
	This fixes an assertion failure on TOT at <http://www.musicindiaonline.com/p/x/tJO0OOBME9.As1NMvHdW/>,
	where JavaScript is getting a NULL string back from some call on the Real Player plugin.

2006-01-30  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        Fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6907
        REGRESSION: United.com menus messed up due to document.all/MSIE sniff
        
        * kjs/nodes.cpp:
        (typeStringForValue):
        Return "undefined" if the given object should masquerade as undefined.
        
        * kjs/object.h:
        (KJS::JSObject::masqueradeAsUndefined):
        Rename from isEqualToNull.
        
        * kjs/operations.cpp:
        (KJS::equal):
        Update for name change.

2006-01-29  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.
        
        - properly define Vector assignment operator; the private version was accidentally left
        in, and the template version is not enough to replace the default

        * kxmlcore/Vector.h:
        (KXMLCore::Vector::operator=):

2006-01-29  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        Fix the build by applying a GCC-specific namespace hack.

        * kjs/lookup.h:

2006-01-29  Eric Seidel <eseidel@apple.com>

        Reviewed by hyatt.

        Fix build on Win32.

        * kjs/lookup.h: fixed ::cacheGlobalObject
        * kxmlcore/Vector.h:
        (KXMLCore::Vector::operator[]): use unsigned long

2006-01-29  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dave Hyatt.

        * kxmlcore/Vector.h:
        (KXMLCore::Vector::operator[]): Add unsigned overload

2006-01-28  Darin Adler  <darin@apple.com>
