@@ -1,3 +1,14 @@
+2006-01-31  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej.
+
+        - added deleteAllValues for HashSet as well as HashMap
+        - fixed conversion from const_iterator to iterator, which I broke a while back
+
+        * kxmlcore/HashMap.h: Updated copyright date.
+        * kxmlcore/HashSet.h: (KXMLCore::deleteAllValues): Added.
+        * kxmlcore/HashTable.h: (KXMLCore::HashTableIterator::operator const_iterator): Added.
+
 2006-01-31  Tim Omernick  <timo@apple.com>
 
         Reviewed by Geoff Garen.
